@@ -11,6 +11,8 @@ def getroot():
 		a=os.environ["ROOT"]
 		if a == '/':
 			return '/'
+	except SystemExit, e:
+		raise # Needed else we can't exit.
 	except:
 		return '/'
 	return os.path.normpath(a)+'/'
